# llm-eval-harness

./: .env.example  .gitignore  README.md  pyproject.toml
eval_harness/: __init__.py  cli.py  evaluators.py  models.py  providers.py  reporter.py  runner.py  storage.py
examples/: advanced_suite.yaml  basic_suite.yaml
tests/: conftest.py  test_evaluators.py
